<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/add_station_background"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="10dp"
    tools:context="com.radio.daniel.radio.fragments.AddRadioStationFragment">


    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="@color/cardview_dark_background"
        app:cardUseCompatPadding="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/add_station_edit_container"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:clickable="true"
                android:orientation="vertical"
                android:padding="10dp"
                android:focusable="true">

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/station_name"
                    android:textColor="@android:color/white"
                    android:textSize="12sp" />

                <EditText
                    android:id="@+id/add_station_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/station_name_hint"
                    android:inputType="textPersonName"
                    android:singleLine="true"
                    android:textColor="@android:color/white" />

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/station_stream_url"
                    android:textColor="@android:color/white"
                    android:textSize="12sp" />

                <EditText
                    android:id="@+id/add_station_stream_url"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/station_stream_url_hint"
                    android:singleLine="true"
                    android:textColor="@android:color/white" />

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/station_low_quality_stream_url"
                    android:textColor="@android:color/white"
                    android:textSize="12sp" />

                <EditText
                    android:id="@+id/add_station_lq_stream_url"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/station_low_quality_stream_url_hint"
                    android:singleLine="true"
                    android:textColor="@android:color/white" />

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/station_cover_url"
                    android:textColor="@android:color/white"
                    android:textSize="12sp" />

                <EditText
                    android:id="@+id/add_station_cover_url"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/station_cover_url_hint"
                    android:singleLine="true"
                    android:textColor="@android:color/white" />

                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/station_site_url"
                    android:textColor="@android:color/white"
                    android:textSize="10sp" />

                <EditText
                    android:id="@+id/add_station_site_url"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/station_site_url_hint"
                    android:singleLine="true"
                    android:textColor="@android:color/white" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/add_station_button_container"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:clickable="true"
                android:orientation="horizontal"
                android:paddingBottom="10dp"
                android:paddingEnd="10dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:paddingStart="10dp"
                android:paddingTop="10dp"
                android:focusable="true">

                <Button
                    android:id="@+id/add_station_cancel_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="5dp"
                    android:layout_marginStart="5dp"
                    android:layout_weight="1"
                    android:text="@string/station_cancel_button"
                    android:theme="@style/AppTheme.Button.Cancel" />

                <Button
                    android:id="@+id/add_station_create_button"
                    style="@style/Widget.AppCompat.Button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="10dp"
                    android:layout_marginStart="10dp"
                    android:layout_weight="1"
                    android:text="@string/station_create_button"
                    android:theme="@style/AppTheme.Button.Create" />

            </LinearLayout>
        </LinearLayout>
    </android.support.v7.widget.CardView>

</RelativeLayout>
